profile picture updated

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/profile-image.png" alt="">
+                    <img class="img-fluid" src="img/profile-img.jpg" alt="">
                 </div>
             </div>
         </div>
